--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>Mi Ciudad Mx</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4181650550"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4221929814" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?3945914614" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -164,7 +164,7 @@ var __adobewebfontsappname__ = "muse";
         <img class="block" id="u4387_img" src="images/brasil_madres.jpg" alt="" width="275" height="334"/>
        </div>
        <div class="clip_frame ose_pre_init grpelem" id="u4407"><!-- image -->
-        <img class="block" id="u4407_img" src="images/brasil_ninas.jpg" alt="" width="275" height="334"/>
+        <img class="block" id="u4407_img" src="images/brasil_ni%c3%b1as.jpg" alt="" width="275" height="334"/>
        </div>
        <div class="clearfix grpelem" id="u4477-6"><!-- content -->
         <p>BÚSQUEDA DE</p>
@@ -281,7 +281,36 @@ var __adobewebfontsappname__ = "muse";
       <span class="fld-input NoWrap actAsDiv clearfix grpelem" id="u3730-4"><!-- content --><input class="wrapped-input" type="tel" spellcheck="false" id="widgetu3729_input" name="custom_U3729" tabindex="3"/><label class="wrapped-input fld-prompt" id="widgetu3729_prompt" for="widgetu3729_input"><span class="actAsPara">TU TELÉFONO</span></label></span>
      </div>
     </form>
-    <div class="PamphletWidget clearfix grpelem" id="pamphletu5469"><!-- none box -->
+    <div class="clearfix grpelem" id="u3033-12"><!-- content -->
+     <p>Queremos construir junto a ti la ciudad que merecemos, para generar una comunidad unida.</p>
+     <p>&nbsp;</p>
+     <p id="u3033-7"><span id="u3033-4">Actuamos de manera organizada en la Ciudad de México, donde se llevan a cabo al rededor de 9,160 movilizaciones al año,&nbsp; más de 25 manifestaciones diarias (</span><span id="u3033-5">Secretaria de Seguridad Pública de la Ciudad de México, datos de 2015</span><span id="u3033-6">).</span></p>
+     <p>&nbsp;</p>
+     <p>¡Somos muchos luchando por una ciudad mejor, todos los días!</p>
+    </div>
+    <img class="ose_pre_init grpelem" id="u5789-8" alt="¿PORQUÉ ACTUAR AHORA?" width="476" height="306" src="images/u5789-8.png"/><!-- rasterized frame -->
+    <img class="ose_pre_init grpelem" id="u5793-6" alt="¿CÓMO VAMOS A HACERLO?" width="498" height="297" src="images/u5793-6.png"/><!-- rasterized frame -->
+   </div>
+   <div class="clearfix grpelem" id="pu2274"><!-- group -->
+    <div class="clearfix mse_pre_init" id="u2274"><!-- group -->
+     <div class="shadow ose_pre_init grpelem" id="u2198"><!-- simple frame --></div>
+    </div>
+    <div class="clearfix mse_pre_init" id="u3132"><!-- group -->
+     <div class="shadow ose_pre_init grpelem" id="u3133"><!-- simple frame --></div>
+    </div>
+    <div class="clearfix mse_pre_init" id="u3009"><!-- group -->
+     <div class="shadow ose_pre_init grpelem" id="u3010"><!-- simple frame --></div>
+    </div>
+    <div class="clip_frame ose_pre_init mse_pre_init" id="u4853"><!-- image -->
+     <img class="block" id="u4853_img" src="images/1-01.png" alt="" width="611" height="360"/>
+    </div>
+    <div class="clip_frame ose_pre_init mse_pre_init" id="u4881"><!-- image -->
+     <img class="block" id="u4881_img" src="images/2-01.png" alt="" width="594" height="350"/>
+    </div>
+    <div class="clip_frame ose_pre_init mse_pre_init" id="u5362"><!-- image -->
+     <img class="block" id="u5362_img" src="images/3-01.png" alt="" width="611" height="360"/>
+    </div>
+    <div class="PamphletWidget clearfix" id="pamphletu5469"><!-- none box -->
      <div class="popup_anchor" id="u5475popup">
       <div class="ContainerGroup clearfix" id="u5475"><!-- stack box -->
        <div class="Container invi clearfix grpelem" id="u5476"><!-- column -->
@@ -312,35 +341,6 @@ var __adobewebfontsappname__ = "muse";
        </div>
       </div>
      </div>
-    </div>
-    <div class="clearfix grpelem" id="u3033-12"><!-- content -->
-     <p>Queremos construir junto a ti la ciudad que merecemos, para generar una comunidad unida.</p>
-     <p>&nbsp;</p>
-     <p id="u3033-7"><span id="u3033-4">Actuamos de manera organizada en la Ciudad de México, donde se llevan a cabo al rededor de 9,160 movilizaciones al año,&nbsp; más de 25 manifestaciones diarias (</span><span id="u3033-5">Secretaria de Seguridad Pública de la Ciudad de México, datos de 2015</span><span id="u3033-6">).</span></p>
-     <p>&nbsp;</p>
-     <p>¡Somos muchos luchando por una ciudad mejor, todos los días!</p>
-    </div>
-    <img class="ose_pre_init grpelem" id="u5789-8" alt="¿PORQUÉ ACTUAR AHORA?" width="476" height="306" src="images/u5789-8.png"/><!-- rasterized frame -->
-    <img class="ose_pre_init grpelem" id="u5793-6" alt="¿CÓMO VAMOS A HACERLO?" width="498" height="297" src="images/u5793-6.png"/><!-- rasterized frame -->
-   </div>
-   <div class="clearfix grpelem" id="pu2274"><!-- group -->
-    <div class="clearfix mse_pre_init" id="u2274"><!-- group -->
-     <div class="shadow ose_pre_init grpelem" id="u2198"><!-- simple frame --></div>
-    </div>
-    <div class="clearfix mse_pre_init" id="u3132"><!-- group -->
-     <div class="shadow ose_pre_init grpelem" id="u3133"><!-- simple frame --></div>
-    </div>
-    <div class="clearfix mse_pre_init" id="u3009"><!-- group -->
-     <div class="shadow ose_pre_init grpelem" id="u3010"><!-- simple frame --></div>
-    </div>
-    <div class="clip_frame ose_pre_init mse_pre_init" id="u4853"><!-- image -->
-     <img class="block" id="u4853_img" src="images/1-01.png" alt="" width="611" height="360"/>
-    </div>
-    <div class="clip_frame ose_pre_init mse_pre_init" id="u4881"><!-- image -->
-     <img class="block" id="u4881_img" src="images/2-01.png" alt="" width="594" height="350"/>
-    </div>
-    <div class="clip_frame ose_pre_init mse_pre_init" id="u5362"><!-- image -->
-     <img class="block" id="u5362_img" src="images/3-01.png" alt="" width="611" height="360"/>
     </div>
    </div>
    <div class="verticalspacer"></div>
@@ -397,8 +397,7 @@ var __adobewebfontsappname__ = "muse";
    $(document).ready(function() { try {
 (function(){var a={},b=function(a){if(a.match(/^rgb/))return a=a.replace(/\s+/g,"").match(/([\d\,]+)/gi)[0].split(","),(parseInt(a[0])<<16)+(parseInt(a[1])<<8)+parseInt(a[2]);if(a.match(/^\#/))return parseInt(a.substr(1),16);return 0};(function(){$('link[type="text/css"]').each(function(){var b=($(this).attr("href")||"").match(/\/?css\/([\w\-]+\.css)\?(\d+)/);b&&b[1]&&b[2]&&(a[b[1]]=b[2])})})();(function(){$("body").append('<div class="version" style="display:none; width:1px; height:1px;"></div>');
 for(var c=$(".version"),d=0;d<Muse.assets.required.length;){var f=Muse.assets.required[d],g=f.match(/([\w\-\.]+)\.(\w+)$/),k=g&&g[1]?g[1]:null,g=g&&g[2]?g[2]:null;switch(g.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");c.addClass(k);var g=b(c.css("color")),h=b(c.css("background-color"));g!=0||h!=0?(Muse.assets.required.splice(d,1),"undefined"!=typeof a[f]&&(g!=a[f]>>>24||h!=(a[f]&16777215))&&Muse.assets.outOfDate.push(f)):d++;c.removeClass(k);break;case "js":k.match(/^jquery-[\d\.]+/gi)&&
-typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();
-/* body */
+typeof $!="undefined"?Muse.assets.required.splice(d,1):d++;break;default:throw Error("Unsupported file type: "+g);}}c.remove();if(Muse.assets.outOfDate.length||Muse.assets.required.length)c="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",(d=location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi))&&Muse.assets.outOfDate.length&&(c+="\nOut of date: "+Muse.assets.outOfDate.join(",")),d&&Muse.assets.required.length&&(c+="\nMissing: "+Muse.assets.required.join(",")),alert(c)})()})();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
